Fix spacing on mobile

--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -77,6 +77,7 @@ pre {
 
 	.side {
 		width: 100%;
+		margin: 2em 0;
 	}
 
 	.side-nav {
